<resources>
    <string name="app_name">Meisshi</string>
    <string name="app_toolbar">MEISSHI</string>
    <string name="splash_login">Log In</string>
    <string name="splash_are_you_new">R U NEW?</string>
    <string name="login_login">Log In</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_or">Or</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_enter">Enter</string>
    <string name="register_email">Email</string>
    <string name="register_name">Name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_password">Password</string>
    <string name="register_sign_in">Sign in</string>
    <string name="main_menu_option_qr">Scan</string>
    <string name="main_menu_option_search">Search</string>
    <string name="main_menu_option_my_card">Share</string>
    <string name="main_menu_option_cardholder">Meisshibox</string>
    <string name="main_menu_option_profile">Profile</string>
    <string name="search_title">Search</string>
    <string name="profile_remove_contact">Remove</string>
    <string name="profile_add_contact">Add</string>
    <string name="test_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc venenatis ipsum felis, non finibus ante blandit at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum faucibus porttitor dolor a feugiat. Ut metus nunc, fringilla ut pretium id, scelerisque consequat turpis. Aenean nec cursus magna. Integer ac sem ex. Ut laoreet dolor at consectetur tempor. Pellentesque congue diam a accumsan facilisis. Fusce metus ante, commodo non dui vel, tristique tempor est. Phasellus sed facilisis tortor. Morbi a tortor mattis, laoreet ante quis, sagittis ex.</string>
    <string name="profile_add_review">Add Review</string>
    <string name="edit_profile_profile_image">Profile</string>
    <string name="edit_profile_logo">Logo</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="professions_dialog_title">Select a profession</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="register_title">Sign up</string>
    <string name="review_form_title">Review</string>
    <string name="notifications_title">Notifications</string>
    <string name="review_form_tap_to_score">Tap to score</string>
    <string name="review_form_comment">Comment</string>
    <string name="profile_tool_edit">Edit</string>

    <string name="login_error_login_title">Error</string>
    <string name="login_error_login_message">The username or password is incorrect.</string>

    <string name="error_server_title">Error</string>
    <string name="error_server_message">Ups! something went wrong.</string>
    <string name="register_error_register_message">Error</string>
    <string name="register_error_register_title">Error</string>
    <string name="register_error_server_message">Error</string>
    <string name="register_error_server_title">Error</string>
    <string name="followers_title">Followers</string>
    <string name="followed_title">Followed</string>
    <string name="select_card_title">Select your card</string>
    <string name="profile_info_title">Info</string>

    <string name="facebook_app_id">578549502325215</string>
    <string name="fb_login_protocol_scheme">fb578549502325215</string>

</resources>
