<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#fff"
                android:text="@string/login_enter"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_log_in_facebook"
                android:text="@string/login_facebook"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:textColor="#fff"
                android:text="@string/login_or"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <EditText
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:id="@+id/et_email"
                android:hint="@string/register_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_shape"
                android:theme="@style/EditTextBorder" />
            <EditText
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:id="@+id/et_name"
                android:hint="@string/register_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_shape"
                android:theme="@style/EditTextBorder" />
            <EditText
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:id="@+id/et_last_name"
                android:hint="@string/register_last_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_shape"
                android:theme="@style/EditTextBorder" />
            <EditText
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:id="@+id/et_password"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_shape"
                android:theme="@style/EditTextBorder"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_register"
        android:text="@string/register_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_shape"
        android:textColor="#fff" />
</LinearLayout>